backend/k8s/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-backend
  name: counter-backend
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: counter-backend
